TestSuite/errors/err0247.pas
begin
  var a := new array of string[3][4];
end.